@@ -337,3 +337,5 @@
     - Updated installers.
 - v.5.8.9 (2025-XX-YY)
     - Notified icon change on saving EXE file by SHChangeNotify.
+    - Added English "Neutral" entry to the language list.
+    - Fixed initial language list box selection.
