@@ -681,3 +681,5 @@
     - インストーラを更新。
 - v.5.8.9 (2025-XX-YY)
     - SHChangeNotify によって EXE ファイルの保存時にアイコンの変更を通知。
+    - 英語の「Neutral」項目を言語リストに追加。
+    - 言語リストボックスの初期選択を修正。
